# mcp-openweathermap

./: .gitignore  .mcpbignore  Dockerfile  Makefile  README.md  conftest.py  manifest.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: build-bundle.yml
e2e/: README.md  __init__.py  conftest.py  test_e2e_docker.py  test_e2e_mcpb.py  test_live_api.py
src/mcp_openweathermap/: SKILL.md  __init__.py  api_client.py  api_models.py  server.py  utils.py
tests/: __init__.py  test_api_client.py  test_placeholder.py  test_server.py
